bindings/RosuFFI.h

typedef struct String String;
typedef struct ResultPtrFFIError ResultPtrFFIError;
typedef struct Performance Performance;
typedef struct Option_f64 Option_f64;
typedef struct Mods Mods;
struct String { uint8_t *ptr; uintptr_t len; uintptr_t capacity; };
struct ResultPtrFFIError { uint32_t variant; union { void *ok; uint32_t err; } payload; };
struct Option_f64 { uint32_t variant; double some; };
typedef enum Mode {
    MODE_OSU = 0,
    MODE_TAIKO = 1,
    MODE_CATCH = 2,
    MODE_MANIA = 3,
} Mode;
uint8_t * interoptopus_wire_create_75623(int32_t size, int32_t * out_len, int32_t * out_capacity);
ResultPtrFFIError performance_create(void);
Option_f64 mods_clock_rate(Mods * instance);
void performance_n_katu(Performance * instance, uint32_t n_katu);
void performance_n50(Performance * instance, uint32_t n50);
ResultPtrFFIError mods_from_json(String str, Mode mode, bool deny_unknown_fields);
ResultPtrFFIError difficulty_create(void);