JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("interoptopus_wire_create_75623").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint8_t *interoptopus_wire_create_75623(int32_t size, int32_t *out_len, int32_t *out_capacity)
     * }
     */
    public static FunctionDescriptor interoptopus_wire_create_75623$descriptor() {
        return interoptopus_wire_create_75623.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint8_t *interoptopus_wire_create_75623(int32_t size, int32_t *out_len, int32_t *out_capacity)
     * }
     */
    public static MethodHandle interoptopus_wire_create_75623$handle() {
        return interoptopus_wire_create_75623.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint8_t *interoptopus_wire_create_75623(int32_t size, int32_t *out_len, int32_t *out_capacity)
     * }
     */
    public static MemorySegment interoptopus_wire_create_75623$address() {
        return interoptopus_wire_create_75623.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint8_t *interoptopus_wire_create_75623(int32_t size, int32_t *out_len, int32_t *out_capacity)
     * }
     */
    public static MemorySegment interoptopus_wire_create_75623(int size, MemorySegment out_len, MemorySegment out_capacity) {
        var mh$ = interoptopus_wire_create_75623.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("interoptopus_wire_create_75623", size, out_len, out_capacity);
            }
            return (MemorySegment)mh$.invokeExact(size, out_len, out_capacity);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ResultPtrFFIError.layout()    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ResultPtrFFIError performance_create()
     * }
     */
    public static FunctionDescriptor performance_create$descriptor() {
        return performance_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ResultPtrFFIError performance_create()
     * }
     */
    public static MethodHandle performance_create$handle() {
        return performance_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ResultPtrFFIError performance_create()
     * }
     */
    public static MemorySegment performance_create$address() {
        return performance_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ResultPtrFFIError performance_create()
     * }
     */
    public static MemorySegment performance_create(SegmentAllocator allocator) {
        var mh$ = performance_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_create", allocator);
            }
            return (MemorySegment)mh$.invokeExact(allocator);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mods_clock_rate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Option_f64.layout(),
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("mods_clock_rate").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Option_f64 mods_clock_rate(Mods *instance)
     * }
     */
    public static FunctionDescriptor mods_clock_rate$descriptor() {
        return mods_clock_rate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Option_f64 mods_clock_rate(Mods *instance)
     * }
     */
    public static MethodHandle mods_clock_rate$handle() {
        return mods_clock_rate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Option_f64 mods_clock_rate(Mods *instance)
     * }
     */
    public static MemorySegment mods_clock_rate$address() {
        return mods_clock_rate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Option_f64 mods_clock_rate(Mods *instance)
     * }
     */
    public static MemorySegment mods_clock_rate(SegmentAllocator allocator, MemorySegment instance) {
        var mh$ = mods_clock_rate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mods_clock_rate", allocator, instance);
            }
            return (MemorySegment)mh$.invokeExact(allocator, instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_n_katu {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_n_katu").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_n_katu(Performance *instance, uint32_t n_katu)
     * }
     */
    public static FunctionDescriptor performance_n_katu$descriptor() {
        return performance_n_katu.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_n_katu(Performance *instance, uint32_t n_katu)
     * }
     */
    public static MethodHandle performance_n_katu$handle() {
        return performance_n_katu.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_n_katu(Performance *instance, uint32_t n_katu)
     * }
     */
    public static MemorySegment performance_n_katu$address() {
        return performance_n_katu.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_n_katu(Performance *instance, uint32_t n_katu)
     * }
     */
    public static void performance_n_katu(MemorySegment instance, int n_katu) {
        var mh$ = performance_n_katu.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_n_katu", instance, n_katu);
            }
            mh$.invokeExact(instance, n_katu);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_n50 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_n50").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_n50(Performance *instance, uint32_t n50)
     * }
     */
    public static FunctionDescriptor performance_n50$descriptor() {
        return performance_n50.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_n50(Performance *instance, uint32_t n50)
     * }
     */
    public static MethodHandle performance_n50$handle() {
        return performance_n50.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_n50(Performance *instance, uint32_t n50)
     * }
     */
    public static MemorySegment performance_n50$address() {
        return performance_n50.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_n50(Performance *instance, uint32_t n50)
     * }
     */
    public static void performance_n50(MemorySegment instance, int n50) {
        var mh$ = performance_n50.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_n50", instance, n50);
            }
            mh$.invokeExact(instance, n50);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mods_from_json {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ResultPtrFFIError.layout(),
            String_.layout(),
            RosuNative.C_INT,
            RosuNative.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("mods_from_json").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ResultPtrFFIError mods_from_json(String str, Mode mode, bool deny_unknown_fields)
     * }
     */
    public static FunctionDescriptor mods_from_json$descriptor() {
        return mods_from_json.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ResultPtrFFIError mods_from_json(String str, Mode mode, bool deny_unknown_fields)
     * }
     */
    public static MethodHandle mods_from_json$handle() {
        return mods_from_json.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ResultPtrFFIError mods_from_json(String str, Mode mode, bool deny_unknown_fields)
     * }
     */
    public static MemorySegment mods_from_json$address() {
        return mods_from_json.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ResultPtrFFIError mods_from_json(String str, Mode mode, bool deny_unknown_fields)
     * }
     */
    public static MemorySegment mods_from_json(SegmentAllocator allocator, MemorySegment str, int mode, boolean deny_unknown_fields) {
        var mh$ = mods_from_json.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mods_from_json", allocator, str, mode, deny_unknown_fields);
            }
            return (MemorySegment)mh$.invokeExact(allocator, str, mode, deny_unknown_fields);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class difficulty_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ResultPtrFFIError.layout()    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("difficulty_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ResultPtrFFIError difficulty_create()
     * }
     */
    public static FunctionDescriptor difficulty_create$descriptor() {
        return difficulty_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ResultPtrFFIError difficulty_create()
     * }
     */
    public static MethodHandle difficulty_create$handle() {
        return difficulty_create.HANDLE;
    }
